# portable-autonomous-device

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Application/: CMakeLists.txt  main.cpp
Framework/: CMakeLists.txt
Framework/Adapters/: CMakeLists.txt
Framework/Adapters/linux_sysfs/: CMakeLists.txt
Framework/Adapters/mock/: CMakeLists.txt
Framework/Core/: CMakeLists.txt
Framework/Core/include/CoreModels/: CommandTypes.hpp  ControlTypes.hpp  EnvironmentState.hpp  HardwareState.hpp  Kinematics.hpp  MotionState.hpp  SensorTypes.hpp  StateMachine.hpp  SystemEvent.hpp  SystemState.hpp  TargetGoal.hpp
Framework/Core/include/CorePorts/: IHardwareMonitor.hpp  ILightActuator.hpp  IMachineControl.hpp  IMotionActuator.hpp  IMotionSensor.hpp  ISurroundingsSensor.hpp
Framework/Domain/: CMakeLists.txt
Framework/Domain/include/Domain/: Kinematics.hpp  MotionState.hpp  StateMachine.hpp  SystemState.hpp  TargetGoal.hpp
Framework/Domain/include/DomainModels/: CommandTypes.hpp  ControlFlags.hpp  ControlTypes.hpp  EnvironmentState.hpp  HardwareState.hpp  MotionCommand.hpp  MotionState.hpp  SensorTypes.hpp  SystemEvent.hpp  SystemState.hpp  TargetGoal.hpp
Framework/Domain/include/DomainPorts/: IHardwareMonitor.hpp  ILightActuator.hpp  IMachineControl.hpp  IMotionActuator.hpp  IMotionSensor.hpp  ISurroundingsSensor.hpp
Framework/Domain/include/Ports/: IMachineControl.hpp
Framework/Infrastructure/: CMakeLists.txt
Framework/Infrastructure/include/Infrastructure/Configuration/: BuildConfig.hpp
Framework/Infrastructure/include/Infrastructure/Logging/: ConsoleLogger.hpp  ILogger.hpp  Log.hpp  LogLevel.hpp  LogService.hpp
Framework/Infrastructure/include/Infrastructure/Utilities/: Assert.hpp  AssertService.hpp
Framework/Infrastructure/src/Logging/: ConsoleLogger.cpp  Log.cpp  LogService.cpp
Framework/Infrastructure/src/Utilities/: Assert.cpp
Framework/Platform/: CMakeLists.txt
Framework/Platform/freertos/: CMakeLists.txt
Framework/Platform/linux/: CMakeLists.txt
Framework/Platform/win/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/Framework/Domain/: CMakeLists.txt
